--- a/_config.yml
+++ b/_config.yml
@@ -198,3 +198,10 @@ protocols:
     os_repo: "https://github.com/bencentra/centrarium.com"
     os_rcs_type: "git"
     os_src: "git@github.com:bencentra/centrarium.com.git"
+
+defaults:
+  -
+    scope:
+      path: "googleac48a103fac33f86.html"
+    values:
+      sitemap: false
