--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description:
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://www.mindfulness.one" # the base hostname & protocol for your site
-cover: "/assets/header_image.jpg"
+cover: "/assets/sunset.jpeg"
 logo: "/assets/logo.png"
 
 # Build settings
